--- a/kazoo/images/kazoo-dev/debian/Dockerfile-oldie-llvm
+++ b/kazoo/images/kazoo-dev/debian/Dockerfile-oldie-llvm
@@ -1,26 +1,47 @@
-ARG OTP_VERSION=23.3.4.18
+ARG OTP_VERSION=23.3.4.11
 FROM erlang:${OTP_VERSION}
 
-ARG VERSION_CODENAME
-
-ENV OTP_VERSION ${OTP_VERSION:-23.3.4.18}
+ENV OTP_VERSION ${OTP_VERSION:-23.3.4.11}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV APT_LISTCHANGES_FRONTEND=none
-ENV VERSION_CODENAME ${VERSION_CODENAME:-buster}
 
 ## apt-transport-https is needed because CouchDB repo is https
 RUN printf "\n\n:: Using erlang:@$OTP_VERSION\n\n\n" \
     && echo ":: Locales and others" \
-    && apt update \
-    && apt install --no-install-recommends -y \
+    && apt-get update \
+    && apt-get install --no-install-recommends -y \
         apt-transport-https \
-        locales gnupg sudo \
+        locales gnupg \
     \
     ## Adding CouchDB repo and GPG key
+    && echo ":: Setting up good repos" \
+    ## bcc needs netprefs as build dependency which is non-free
+    && sed -r -i 's/(stretch.*main)$/\1 non-free/g' /etc/apt/sources.list \
+    \
     && echo ":: Adding CouchDB repo" \
-    && (curl -L https://couchdb.apache.org/repo/keys.asc | gpg --dearmor | sudo tee /usr/share/keyrings/couchdb-archive-keyring.gpg >/dev/null 2>&1) \
-    && (echo "deb [signed-by=/usr/share/keyrings/couchdb-archive-keyring.gpg] https://apache.jfrog.io/artifactory/couchdb-deb/ ${VERSION_CODENAME} main" | sudo tee /etc/apt/sources.list.d/couchdb.list >/dev/null) \
+    && case "$OTP_VERSION" in \
+           22*) \
+             echo "it is buster" \
+             && (echo "deb https://apache.bintray.com/couchdb-deb buster main" | tee -a /etc/apt/sources.list) \
+             && (curl -L https://couchdb.apache.org/repo/bintray-pubkey.asc | apt-key add -) \
+             ;; \
+           *) \
+             echo "it is stretch" \
+             && (echo "deb https://apache.bintray.com/couchdb-deb stretch main" | tee -a /etc/apt/sources.list) \
+             && (curl -L https://couchdb.apache.org/repo/bintray-pubkey.asc | apt-key add -) \
+             ;; \
+       esac \
+    \
+    # && echo ":: Adding LLVM repo" \
+    # && echo >> /etc/apt/sources.list \
+    # && echo '# LLVM repo (in hope to add bcc & bpftrace later)' >> /etc/apt/sources.list \
+    # && (echo "deb http://apt.llvm.org/stretch/ llvm-toolchain-stretch main" | tee -a /etc/apt/sources.list) \
+    # && (echo "deb-src http://apt.llvm.org/stretch/ llvm-toolchain-stretch main" | tee -a /etc/apt/sources.list) \
+    # && echo "# LLVM 8" >> /etc/apt/sources.list \
+    # && (echo "deb http://apt.llvm.org/stretch/ llvm-toolchain-stretch-8 main" | tee -a /etc/apt/sources.list) \
+    # && (echo "deb-src http://apt.llvm.org/stretch/ llvm-toolchain-stretch-8 main" | tee -a /etc/apt/sources.list) \
+    # && (curl -L https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -) \
     \
     && echo ":: Set timezone to UTC by default" \
     && sed -i 's/# en_US\.UTF-8/en_US.UTF-8/g' /etc/locale.gen \
@@ -36,12 +57,13 @@ RUN printf "\n\n:: Using erlang:@$OTP_VERSION\n\n\n" \
         neovim emacs-nox ctags bash-completion tmux \
         silversearcher-ag jq colordiff htop \
         ## useful tools
-        man less whois strace tcpdump net-tools ntpdate dnsutils psmisc lsof \
+        man sudo less whois strace tcpdump net-tools ntpdate dnsutils psmisc lsof \
         ## Kazoo runtime dependencies
         zip unzip libexpat1-dev htmldoc sox libsox-fmt-all ghostscript \
         imagemagick libtiff-tools openjdk-11-jre libreoffice-writer \
         ## Docs dependencies
-        mkdocs python3-pip cpio \
+        mkdocs python-pip python3-pip cpio \
+        python-yaml python-markdown python-jsonschema \
         python3-yaml python3-markdown python3-jsonschema \
         ## validate-js dependencies
         couchdb \
@@ -62,68 +84,11 @@ RUN printf "\n\n:: Using erlang:@$OTP_VERSION\n\n\n" \
 
 ENV LANG en_US.UTF-8
 
-ENV NODE_VERSION 16.18.1
-
-RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" \
-  && case "${dpkgArch##*-}" in \
-    amd64) ARCH='x64';; \
-    ppc64el) ARCH='ppc64le';; \
-    s390x) ARCH='s390x';; \
-    arm64) ARCH='arm64';; \
-    armhf) ARCH='armv7l';; \
-    i386) ARCH='x86';; \
-    *) echo "unsupported architecture"; exit 1 ;; \
-  esac \
-  # gpg keys listed at https://github.com/nodejs/node#release-keys
-  && set -ex \
-  && for key in \
-    4ED778F539E3634C779C87C6D7062848A1AB005C \
-    141F07595B7B3FFE74309A937405533BE57C7D57 \
-    74F12602B6F1C4E913FAA37AD3A89613643B6201 \
-    61FC681DFB92A079F1685E77973F295594EC4689 \
-    8FCCA13FEF1D0C2E91008E09770F7A9A5AE15600 \
-    C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
-    890C08DB8579162FEE0DF9DB8BEAB4DFCF555EF4 \
-    C82FA3AE1CBEDC6BE46B9360C43CEC45C17AB93C \
-    108F52B48DB57BB0CC439B2997B01419BD92F80A \
-  ; do \
-      gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys "$key" || \
-      gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" ; \
-  done \
-  && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH.tar.xz" \
-  && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
-  && gpg --batch --decrypt --output SHASUMS256.txt SHASUMS256.txt.asc \
-  && grep " node-v$NODE_VERSION-linux-$ARCH.tar.xz\$" SHASUMS256.txt | sha256sum -c - \
-  && tar -xJf "node-v$NODE_VERSION-linux-$ARCH.tar.xz" -C /usr/local --strip-components=1 --no-same-owner \
-  && rm "node-v$NODE_VERSION-linux-$ARCH.tar.xz" SHASUMS256.txt.asc SHASUMS256.txt \
-  && ln -s /usr/local/bin/node /usr/local/bin/nodejs \
-  # smoke tests
-  && node --version \
-  && npm --version
-
-ENV YARN_VERSION 1.22.19
-
-RUN set -ex \
-  && for key in \
-    6A010C5166006599AA17F08146C2130DFD2497F5 \
-  ; do \
-    gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys "$key" || \
-    gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" ; \
-  done \
-  && curl -fsSLO --compressed "https://yarnpkg.com/downloads/$YARN_VERSION/yarn-v$YARN_VERSION.tar.gz" \
-  && curl -fsSLO --compressed "https://yarnpkg.com/downloads/$YARN_VERSION/yarn-v$YARN_VERSION.tar.gz.asc" \
-  && gpg --batch --verify yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz \
-  && mkdir -p /opt \
-  && tar -xzf yarn-v$YARN_VERSION.tar.gz -C /opt/ \
-  && ln -s /opt/yarn-v$YARN_VERSION/bin/yarn /usr/local/bin/yarn \
-  && ln -s /opt/yarn-v$YARN_VERSION/bin/yarnpkg /usr/local/bin/yarnpkg \
-  && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz \
-  # smoke test
-  && yarn --version
-
 RUN echo ":: Install nvim and docs dependencies" \
     # setuptools is needed to install python-neovim
+    && pip install setuptools \
     && pip3 install setuptools \
+    && pip install pynvim pyembed-markdown \
     && pip3 install pynvim pyembed-markdown \
     && pip3 install WeasyPrint \
     && ln -s /opt/couchdb/bin/couchjs /usr/bin/couchj \
